--- a/AIMIA_Assignment_2/Q1.ipynb
+++ b/AIMIA_Assignment_2/Q1.ipynb
@@ -2356,13 +2356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "b3ab6dd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Model save \n",
-    "torch.save(model_exp2.state_dict(), \"unet_model2.pth\")"
+    "# Model save - commented out to avoid large files in git\n",
+    "# torch.save(model_exp2.state_dict(), \"unet_model2.pth\")\n",
+    "print(\"Model training completed. Use torch.save() locally if needed.\")"
    ]
   },
   {
@@ -3286,12 +3287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "2c7be254",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model_exp3.state_dict(), \"unet_model3.pth\")"
+    "# torch.save(model_exp3.state_dict(), \"unet_model3.pth\")\n",
+    "print(\"Model training completed. Use torch.save() locally if needed.\")"
    ]
   },
   {
