--- a/AIMIA_Assignment_2/Q1.ipynb
+++ b/AIMIA_Assignment_2/Q1.ipynb
@@ -807,10 +807,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "639e249c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted masks shape (947, 128, 128)\n"
+     ]
+    }
+   ],
    "source": [
     "X_test = test_images_norm.reshape(-1, 1)\n",
     "y_pred = clf.predict(X_test)\n",
@@ -820,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a0e906d4",
    "metadata": {},
    "outputs": [],
@@ -869,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "bf354a07",
    "metadata": {},
    "outputs": [
@@ -912,35 +920,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "eb8c89bb",
+   "execution_count": 12,
+   "id": "2a8702a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of sampled X_train_NB: (10000, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# from sklearn.neighbors import KNeighborsClassifier\n",
-    "# knn = KNeighborsClassifier(n_neighbors=2, algorithm='kd_tree')\n",
-    "# knn.fit(X_train, y_train)\n",
-    "# y_pred_knn = knn.predict(X_test)\n"
+    "def sample_data(X, y, sample_size=10000):\n",
+    "    np.random.seed(42)\n",
+    "    class_0_indices = np.where(y == 0)[0]\n",
+    "    class_1_indices = np.where(y == 1)[0]\n",
+    "    n_class_0 = sample_size // 2\n",
+    "    n_class_1 = sample_size - n_class_0\n",
+    "    sample_0 = np.random.choice(class_0_indices, n_class_0, replace=False)\n",
+    "    sample_1 = np.random.choice(class_1_indices, n_class_1, replace=False)\n",
+    "    indices = np.concatenate([sample_0, sample_1])\n",
+    "    np.random.shuffle(indices)\n",
+    "    return X[indices], y[indices]\n",
+    "X_train_NB, y_train_NB = sample_data(X_train, y_train, sample_size=10000)\n",
+    "print(f\"Shape of sampled X_train_NB: {X_train_NB.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "4d814f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=5, algorithm='ball_tree', leaf_size=50, n_jobs=-1, metric='manhattan')\n",
+    "knn.fit(X_train_NB, y_train_NB)\n",
+    "y_pred_knn = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "be204744",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dice_scores_knn = []\n",
-    "# f1_scores_knn = []\n",
-    "# lesion_accuracies_knn = []\n",
-    "# predicted_masks_knn = y_pred_knn.reshape(test_images.shape)\n",
-    "# for i in range(test_images.shape[0]):\n",
-    "#     true = test_masks[i].flatten()\n",
-    "#     pred = predicted_masks_knn[i].flatten()\n",
-    "#     dice_scores_knn.append(dice_score(true, pred))\n",
-    "#     f1 = f1_score(true, pred, zero_division=1)\n",
-    "#     f1_scores_knn.append(f1)\n",
-    "#     lesion_accuracies_knn.append(lesion_wise_accuracy(test_masks[i], predicted_masks_knn[i]))"
+    "dice_scores_knn = []\n",
+    "f1_scores_knn = []\n",
+    "lesion_accuracies_knn = []\n",
+    "predicted_masks_knn = y_pred_knn.reshape(test_images.shape)\n",
+    "for i in range(test_images.shape[0]):\n",
+    "    true = test_masks[i].flatten()\n",
+    "    pred = predicted_masks_knn[i].flatten()\n",
+    "    dice_scores_knn.append(dice_score(true, pred))\n",
+    "    f1 = f1_score(true, pred, zero_division=1)\n",
+    "    f1_scores_knn.append(f1)\n",
+    "    lesion_accuracies_knn.append(lesion_wise_accuracy(test_masks[i], predicted_masks_knn[i]))"
    ]
   },
   {
@@ -9170,7 +9207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
